--- a/views/administrator/event.hbs
+++ b/views/administrator/event.hbs
@@ -15,9 +15,6 @@
     
     <h1>{{heading}}</h1>
 
-    <h3>Event Description</h3>
-    <p>{{desc}}</p>
-
     <br>
 
     <button type="button" data-toggle="modal" data-target="#editEventForm">Edit Event</button>
@@ -62,6 +59,31 @@
     
     <h3>Attendees</h3>
     <p>Number of attendees: {{countAttendees}}</p>
+    <p></p><button type="button" data-toggle="modal" data-target="#addAttendeeForm">Add Attendee</button></p>
+    <div class="modal fade" id="addAttendeeForm" tabindex="-1" role="dialog" aria-labelledby="addAttendeeFormLabel" aria-hidden="true">
+        <form method="post" action="/addAttendee">
+            <input type="hidden" name="event_uuid" value={{event_uuid}}>
+            <div id="addAttendee" class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header text-center">
+                        <h4 class="modal-title w-100 font-weight-bold">Add Attendee</h4>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label data-error="wrong" data-success="right" for="addAttendeeForm-description">Attendee's Email</label>
+                            <input type="email" class="form-control" rows="3" name="email"></textarea>
+                        </div>
+                    </div>
+                    <div class="modal-footer d-flex justify-content-center">
+                        <button class="btn btn-deep-orange">Add</button>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
     <table>
         <tr>
             <th>Name</th>
