Added Calendar in About page

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -19,6 +19,7 @@
             <br><br>
             <p>{{details.description}}</p>
         </div>
+        <iframe src="https://calendar.google.com/calendar/embed?src=utcejt57laan1o4q9glenidqvg%40group.calendar.google.com&ctz=America%2FVancouver" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
     </div>
 </body>
 {{> footer}}
