changes according to feedback

--- a/views/administrator/events.hbs
+++ b/views/administrator/events.hbs
@@ -57,6 +57,7 @@
                 <th class="event_text">Event Description</th>
                 <th class="event_text">Date</th>
                 <th class="event_text"></th>
+                <th class="event_text"></th>
             </tr>
 
             {{#each event}}
