--- a/public/css/style.css
+++ b/public/css/style.css
@@ -340,7 +340,7 @@ p {
 
 
 .sidenav a {
-    height: 17%;
+    height: 10%;
     padding: 15px 15px 15px 10px;
     text-decoration: none;
     font-size: 18px;
@@ -366,11 +366,10 @@ p {
     outline: none;
 }
 
-/* .dropdown-container {
+.dropdown_container {
     display: none;
     background-color: #262626;
-    padding-left: 8px;
-} */
+}
 
 
 .dropdown_menu:hover {
@@ -380,6 +379,11 @@ p {
 }
 
 .fa-caret-down {
+    float: right;
+    padding-right: 8px;
+}
+
+.fa-caret-up {
     float: right;
     padding-right: 8px;
 }
