--- a/views/administrator/useraccounts.hbs
+++ b/views/administrator/useraccounts.hbs
@@ -19,12 +19,21 @@
                 <tr>
                     <th>Name</th>
                     <th>Email</th>
+                    <th></th>
+                    <th></th>
                 </tr>
 
                 {{#each users}}
                 <tr>
                     <td><a href="/admin/useraccounts/{{account_uuid}}">{{lastName}}, {{firstName}}</td></a>
-                    <td><a href="/admin/useraccounts/{{account_uuid}}">{{email}}</td></a>
+                    <td>{{email}}</td>
+                    <td><a href="/admin/useraccounts/{{account_uuid}}"><button class="btn btn-outline-primary">Edit user</button></a></td>
+                    <td>
+                        <form method="post" action="/deleteUser">
+                            <input type="hidden" name="account_uuid" value="{{account_uuid}}">
+                            <button type="submit" class="btn btn-outline-danger">Delete</button>
+                        </form>
+                    </td>
                 </tr>
                 {{/each}}
             </table>
