--- a/views/administrator/events.hbs
+++ b/views/administrator/events.hbs
@@ -77,6 +77,7 @@
                                             <span aria-hidden="true">&times;</span>
                                         </button>
                                     </div>
+                                    <input type="hidden" name="event_uuid" value={{event_uuid}}>
                                     <div class="modal-body">
                                         <div class="form-group">
                                             <label data-error="wrong" data-success="right" for="eventForm-name">Event Name</label>
@@ -84,7 +85,7 @@
                                         </div>
                                         <div class="form-group">
                                             <label data-error="wrong" data-success="right" for="eventForm-date">Event Date</label>
-                                            <input type="date" class="form-control validate" name="date" value={{eventDate}} min={{today}}>
+                                            <input type="date" class="form-control validate" name="date" value={{eventDate}} min="{{../today}}">
                                         </div>
                                         <div class="form-group">
                                             <label data-error="wrong" data-success="right" for="eventForm-description">Event Description</label>
