--- a/views/administrator/events.hbs
+++ b/views/administrator/events.hbs
@@ -35,7 +35,7 @@
                         </div>
                         <div class="form-group">
                             <label data-error="wrong" data-success="right" for="eventForm-date">Event Date</label>
-                            <input type="date" class="form-control validate" name="date">
+                            <input type="date" class="form-control validate" name="date" min={{today}}>
                         </div>
                         <div class="form-group">
                             <label data-error="wrong" data-success="right" for="eventForm-description">Event Description</label>
@@ -99,11 +99,42 @@
                             </div>
                         </form>
                     </div>
+                    
                 <td class="event_text">
-                    <form method="post" action="/deleteEvent">
-                        <input type="hidden" name="event_uuid" value="{{event_uuid}}">
-                        <button type="submit" class="btn btn-outline-danger">Delete</button>
-                    </form>
+                    <button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#delete{{event_uuid}}">
+                        Delete
+                    </button>
+                    
+                    <!-- Modal -->
+                    <div class="modal fade" id="delete{{event_uuid}}" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel"
+                        aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">Delete This Event?</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    <div class="alert alert-danger">
+                                        <strong>Danger!</strong> This action cannot be undone
+                                    </div>
+                                    {{eventName}}<br>
+                                    {{eventDate}}<br>
+                                    {{eventDescription}}
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                    <form method="post" action="/deleteEvent" class="no_margin">
+                                        <input type="hidden" name="event_uuid" value="{{event_uuid}}">
+                                        <button type="submit" class="btn btn-outline-danger">Delete</button>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    
                 </td>
             </tr>
             {{/each}}
