admins can promote/demote accounts

--- a/public/css/admin_style.css
+++ b/public/css/admin_style.css
@@ -41,3 +41,11 @@ td a:visited {
     width: 25% !important;
 }
 
+.adminTable, .nonAdminTable {
+    white-space: nowrap;
+    width: 50%
+}
+
+.adminTableCell {
+    width: 35%
+}
