--- a/views/administrator/index.hbs
+++ b/views/administrator/index.hbs
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-{{> head}}
+<head>
+    <link rel="stylesheet" type="text/css" href="/css/admin_style.css">
+    {{> head}}
+</head>
 
 <body>
     {{> admin_menu}}
+
 
     <div class="maincontent">
         {{> menu}}
 
         <h1>{{heading}}</h1>
     </div>
+    <div class="jumbotron">
+    
+    </div>
 </body>
 
-
+{{> footer}}
 </html>
