--- a/views/administrator/useraccounts.hbs
+++ b/views/administrator/useraccounts.hbs
@@ -12,9 +12,16 @@
     <div class="maincontent">
         {{> menu}}
 
-        <h1>{{heading}}</h1>
+        <div>
+            <h1>{{heading}}</h1>
+        </div>
+
+        <div class="jumbotron">
+            
+        </div>
+
     </div>
 
 </body>
-
+{{> footer}}
 </html>
