--- a/public/css/login_style.css
+++ b/public/css/login_style.css
@@ -117,6 +117,7 @@ form:after {
     text-align: center;
     text-shadow: 0 1px 0 #fff;
     width: 400px;
+    margin-top: 18%;
 }
 
 #content h1 {
