--- a/views/administrator/adminaccount.hbs
+++ b/views/administrator/adminaccount.hbs
@@ -14,12 +14,16 @@
 
         <h1>{{heading}}</h1>
         
+        <div class="jumbotron">
+
+        </div>
+
     </div>
 
 </body>
 
-<div class="maincontent">
+{{!-- <div class="maincontent"> --}}
     {{> footer}}
-</div>
+{{!-- </div> --}}
 
 </html>
