--- a/views/administrator/webcontent.hbs
+++ b/views/administrator/webcontent.hbs
@@ -11,17 +11,19 @@
     
     <div class="maincontent">
         {{> menu}}
-
         <h1>{{heading}}</h1>
 
-        <h2><a href="/admin/webcontent/home">Home</a></h2>
-        <h2><a href="/admin/webcontent/about">About</a></h2>
-        <h2><a href="/admin/webcontent/agenda">Agenda</a></h2>
-        <h2><a href="/admin/webcontent/speakers">Speakers</a></h2>
-        <h2><a href="/admin/webcontent/contact">Contact</a></h2>
 
+        <div class="jumbotron">
+            <h2><a href="/admin/webcontent/home">Home</a></h2>
+            <h2><a href="/admin/webcontent/about">About</a></h2>
+            <h2><a href="/admin/webcontent/agenda">Agenda</a></h2>
+            <h2><a href="/admin/webcontent/speakers">Speakers</a></h2>
+            <h2><a href="/admin/webcontent/contact">Contact</a></h2>
+        </div>
+        
     </div>
 
 </body>
-
+{{> footer}}
 </html>
