--- a/views/speakers.hbs
+++ b/views/speakers.hbs
@@ -9,42 +9,59 @@
         <div class="grid-container">
             <div class="grid-item imageContainer">
             <image id="profileImage" src="https://feedback.seekingalpha.com/s/cache/b6/21/b6213b40c842f6d52c80c22b890e7ae2.png" />
-            </div>
-
-            <div class="grid-item">Josh Walls is a IT specialist with ten years experience in coding.
-            Josh specializes in technologies and regularly attends national training sessions to showcase new IT tech
-            trends, such as software, mobile apps. A strong believer in the power of positive
-            thinking in the workplace, Josh regularly develops internal wellness campaigns to assist employees with effective mental
-            health techniques. John enjoys a good Netflix binge but can also be found on long bike rides on hilly country roads.</div>
             <div class="grid-item1">
                 <p class="speaker-info">Speaker topic: </p><br>
                 <p class="speaker-info">Time: </p><br>
                 <p class="speaker-info">Location(room): </p>
             </div>
+            </div>
 
-            <div class="grid-item"><image id="profileImage" src="https://feedback.seekingalpha.com/s/cache/b6/21/b6213b40c842f6d52c80c22b890e7ae2.png" /></div>
             <div class="grid-item">Josh Walls is a IT specialist with ten years experience in coding.
             Josh specializes in technologies and regularly attends national training sessions to showcase new IT tech
             trends, such as software, mobile apps. A strong believer in the power of positive
             thinking in the workplace, Josh regularly develops internal wellness campaigns to assist employees with effective mental
             health techniques. John enjoys a good Netflix binge but can also be found on long bike rides on hilly country roads.</div>
-            <div class="grid-item">
+            {{!-- <div class="grid-item1">
+                <p class="speaker-info">Speaker topic: </p><br>
+                <p class="speaker-info">Time: </p><br>
+                <p class="speaker-info">Location(room): </p>
+            </div> --}}
+
+            <div class="grid-item"><image id="profileImage" src="https://feedback.seekingalpha.com/s/cache/b6/21/b6213b40c842f6d52c80c22b890e7ae2.png" />
+            <div class="grid-item1">
                 <p class="speaker-info">Speaker topic: </p><br>
                 <p class="speaker-info">Time: </p><br>
                 <p class="speaker-info">Location(room): </p>
             </div>
-
-            <div class="grid-item"><image id="profileImage" src="https://feedback.seekingalpha.com/s/cache/b6/21/b6213b40c842f6d52c80c22b890e7ae2.png" /></div>
+            </div>
             <div class="grid-item">Josh Walls is a IT specialist with ten years experience in coding.
             Josh specializes in technologies and regularly attends national training sessions to showcase new IT tech
             trends, such as software, mobile apps. A strong believer in the power of positive
             thinking in the workplace, Josh regularly develops internal wellness campaigns to assist employees with effective mental
             health techniques. John enjoys a good Netflix binge but can also be found on long bike rides on hilly country roads.</div>
-            <div class="grid-item">
+            {{!-- <div class="grid-item">
+                <p class="speaker-info">Speaker topic: </p><br>
+                <p class="speaker-info">Time: </p><br>
+                <p class="speaker-info">Location(room): </p>
+            </div> --}}
+
+            <div class="grid-item"><image id="profileImage" src="https://feedback.seekingalpha.com/s/cache/b6/21/b6213b40c842f6d52c80c22b890e7ae2.png" />
+            <div class="grid-item1">
                 <p class="speaker-info">Speaker topic: </p><br>
                 <p class="speaker-info">Time: </p><br>
                 <p class="speaker-info">Location(room): </p>
             </div>
+            </div>
+            <div class="grid-item">Josh Walls is a IT specialist with ten years experience in coding.
+            Josh specializes in technologies and regularly attends national training sessions to showcase new IT tech
+            trends, such as software, mobile apps. A strong believer in the power of positive
+            thinking in the workplace, Josh regularly develops internal wellness campaigns to assist employees with effective mental
+            health techniques. John enjoys a good Netflix binge but can also be found on long bike rides on hilly country roads.</div>
+            {{!-- <div class="grid-item">
+                <p class="speaker-info">Speaker topic: </p><br>
+                <p class="speaker-info">Time: </p><br>
+                <p class="speaker-info">Location(room): </p>
+            </div> --}}
         </div>
     </div>
 </body>
