--- a/views/administrator/events.hbs
+++ b/views/administrator/events.hbs
@@ -51,7 +51,7 @@
         </form>
     </div>
 
-    <div class="jumbotron">
+    <div class="jumbotron no_background_colour">
         <table class="event_table">
             <tr>
                 <th class="event_text">Event Name</th>
