--- a/views/administrator/useraccounts.hbs
+++ b/views/administrator/useraccounts.hbs
@@ -14,7 +14,7 @@
 
         <h1>{{heading}}</h1>
 
-        <div class="jumbotron">
+        <div class="jumbotron no_background_colour">
             <table class="usersTable">
                 <tr>
                     <th>Name</th>
