--- a/views/administrator/adminaccount.hbs
+++ b/views/administrator/adminaccount.hbs
@@ -21,7 +21,7 @@
                 <th></th>
             </tr>
             {{#each admins}}
-            <tr>
+            <tr class="account_table">
                 <td class="adminTableCell">{{firstName}} {{lastName}}</td>
                 <td class="adminTableCell">{{email}}</td>
                 <td class="adminTableCell">
@@ -44,7 +44,7 @@
                 <th></th>
             </tr>
             {{#each nonAdmins}}
-            <tr>
+            <tr class="account_table">
                 <td class="adminTableCell">{{firstName}} {{lastName}}</td>
                 <td class="adminTableCell">{{email}}</td>
                 <td class="adminTableCell">
