--- a/views/administrator/useraccounts.hbs
+++ b/views/administrator/useraccounts.hbs
@@ -24,7 +24,7 @@
                 </tr>
 
                 {{#each users}}
-                <tr>
+                <tr class="account_table">
                     <td><a href="/admin/useraccounts/{{account_uuid}}">{{lastName}}, {{firstName}}</td></a>
                     <td>{{email}}</td>
                     <td><a href="/admin/useraccounts/{{account_uuid}}"><button class="btn btn-outline-primary">Edit user</button></a></td>
