Environmental variable for api key and domain

--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -9,7 +9,7 @@
         <h1> Have a question? Contact us. </h1>
 
         {{!-- <div class="page-container"> --}}
-        <div class="contact-container">
+        {{!-- <div class="contact-container"> --}}
             <!-- <div class="child-div">
                 <label for="name">Full Name</label>
                 <input id="name" name="name" type="text" />
