Forgot password page

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -26,8 +26,13 @@
                     <input type="submit" class="form_button" value="Submit" id="login_button" />
                     {{!-- <input type="submit" value="Log in" /> --}}
                 </div>
+
+               
             </form><!-- form -->
-    
+
+             <input type="submit" class="form_button" value="Forgot Password?" id="forgot_password_button" />
+             <br><br>
+
         </section><!-- content -->
     </div><!-- container -->
 </body>
