--- a/views/login.hbs
+++ b/views/login.hbs
@@ -29,9 +29,11 @@
 
                
             </form><!-- form -->
-
+            
+            <form method="POST" action="forgotpassword"
              <input type="submit" class="form_button" value="Forgot Password?" id="forgot_password_button" />
              <br><br>
+             </form>
 
         </section><!-- content -->
     </div><!-- container -->
